--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "Boilerplate\\": "app/"
         },
         "classmap": [
             "database/seeds",
