--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "barryvdh/laravel-ide-helper": "^2.9",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.13.0",
+        "laravel/breeze": "^1.0",
         "laravel/sail": "^0.0.5",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.1",
