--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "alpinejs": "^2.8.0",
+        "autoprefixer": "^10.2.0",
         "axios": "^0.21.1",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.9",
         "lodash": "^4.17.20",
-        "resolve-url-loader": "^3.1.2"
+        "postcss": "^8.2.3",
+        "postcss-import": "^14.0.0",
+        "resolve-url-loader": "^3.1.2",
+        "tailwindcss": "^2.0.2"
     }
 }
