--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.37",
-        "laravel/tinker": "^2.10"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.10",
+        "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
