--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@headlessui/react": "^2.2.0",
+        "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.10",
-        "alpinejs": "^3.14.7",
+        "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "concurrently": "^9.1.2",
         "laravel-vite-plugin": "^1.1.1",
         "postcss": "^8.5.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.7"
     }
