--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "laravel_boilerplate",
     "private": true,
     "type": "module",
     "scripts": {
@@ -7,11 +8,11 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "vite": "^5.0"
+        "axios": "^1.7.9",
+        "concurrently": "^9.1.2",
+        "laravel-vite-plugin": "^1.1.1",
+        "postcss": "^8.5.0",
+        "tailwindcss": "^3.4.17",
+        "vite": "^6.0.7"
     }
 }
