--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 		}
 	},
 	// "remoteUser": "sail",
-	// "postCreateCommand": "chown -R 1000:1000 /var/www/html 2>/dev/null || true"
+	 "postCreateCommand": "./docker/setup.sh",
 	// "forwardPorts": [],
 	// "runServices": [],
 	// "shutdownAction": "none",
