--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+
+PORT_PREFIX=0
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
@@ -9,15 +12,15 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_DRIVER=cache
+APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=stderr
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
