--- a/compose.yaml
+++ b/compose.yaml
@@ -128,6 +128,12 @@ services:
             start_interval: 1s
             retries: 1
 
+    mailpit:
+        image: axllent/mailpit
+        ports:
+            - ${PORT_PREFIX:-0}1025:1025
+            - ${PORT_PREFIX:-0}8025:8025
+
 volumes:
     minio:
     pgdata:
