--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.24",
         "laravel/breeze": "^2.3",
+        "laravel/dusk": "^8.2",
         "laravel/pail": "^1.2",
         "laravel/pint": "^1.19",
         "laravel/sail": "^1.39",
