--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.24",
         "larastan/larastan": "^3.0",
         "laravel/breeze": "^2.3",
@@ -53,7 +54,9 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -65,6 +68,9 @@
         ],
         "phpstan": [
             "./vendor/bin/phpstan"
+        ],
+        "update-models-helper": [
+            "@php artisan ide-helper:models -RM"
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
