--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,12 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Tokyo
 #APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=ja
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=ja_JP
 
 APP_MAINTENANCE_DRIVER=cache
 APP_MAINTENANCE_STORE=database
