--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build:client": "tsc && vite build",
         "build:ssr": "tsc && vite build --ssr",
         "dev": "vite",
-        "lint": "eslint './resources/js/**/*.{ts,tsx,js,jsx}' './*.{ts,tsx,js,jsx}' --fix"
+        "lint": "eslint './resources/js/**/*.{ts,tsx,js,jsx}' './*.{ts,tsx,js,jsx}' --fix",
+        "storybook": "storybook dev --ci -p $(echo $PORT_PREFIX)6006",
+        "build-storybook": "storybook build"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
@@ -18,8 +20,17 @@
         "react-dom": "^19.0.0"
     },
     "devDependencies": {
+        "@chromatic-com/storybook": "^3.2.2",
         "@eslint/compat": "^1.2.4",
         "@tailwindcss/forms": "^0.5.10",
+        "@storybook/addon-essentials": "^8.4.7",
+        "@storybook/addon-interactions": "^8.4.7",
+        "@storybook/addon-onboarding": "^8.4.7",
+        "@storybook/addon-themes": "^8.4.7",
+        "@storybook/blocks": "^8.4.7",
+        "@storybook/react": "^8.4.7",
+        "@storybook/react-vite": "^8.4.7",
+        "@storybook/test": "^8.4.7",
         "@types/node": "^22.10.6",
         "@types/react": "^19.0.6",
         "@types/react-dom": "^19.0.3",
@@ -33,12 +44,14 @@
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-storybook": "^0.11.1",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.1.1",
         "postcss": "^8.5.0",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.9",
+        "storybook": "^8.4.7",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.7.3",
         "vite": "^6.0.7"
