--- a/compose.yaml
+++ b/compose.yaml
@@ -89,5 +89,26 @@ services:
             - ./package.json:/var/www/html/package.json
             - ./package-lock.json:/var/www/html/package-lock.json
 
+    db:
+        environment:
+            POSTGRES_DB: ${DB_DATABASE:-postgres}
+            POSTGRES_USER: ${DB_USERNAME:-postgres}
+            POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
+            POSTGRES_HOST_AUTH_METHOD: trust
+        image: postgres:16.4
+        ports:
+            - ${PORT_PREFIX:-0}5432:5432
+        volumes:
+            - ./docker/pgsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sql:delegated
+            - pgdata:/var/lib/postgresql/data/
+        healthcheck:
+            test: ["CMD", "pg_isready", "-q", "-d", "${DB_DATABASE:-postgres}", "-U", "${DB_USERNAME:-postgres}"]
+            interval: 60s
+            timeout: 5s
+            start_period: 30s
+            start_interval: 1s
+            retries: 1
+
 volumes:
+    pgdata:
     socket-upstream:
