--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -5,6 +5,7 @@ services:
         build: .
         depends_on:
             - db
+            - minio
         environment:
             APP_KEY: ${APP_KEY:?err}
             APP_NAME: ${APP_NAME:-Laravel}
@@ -28,6 +29,14 @@ services:
             DB_DATABASE: ${DB_DATABASE:-postgres}
             DB_USERNAME: ${DB_USERNAME:-postgres}
             DB_PASSWORD: ${DB_PASSWORD:-password}
+            FILESYSTEM_DISK: ${FILESYSTEM_DISK:-s3}
+            AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-minio}
+            AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-password}
+            AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
+            AWS_BUCKET: ${AWS_BUCKET:-local}
+            AWS_ENDPOINT: ${AWS_ENDPOINT:-http://minio:9000}
+            AWS_URL: ${AWS_URL:-http://localhost:${PORT_PREFIX:-0}9000/local}
+            AWS_USE_PATH_STYLE_ENDPOINT: ${AWS_USE_PATH_STYLE_ENDPOINT:-true}
         volumes:
             - socket-upstream:/var/run/php/
 
@@ -65,6 +74,26 @@ services:
             start_interval: 1s
             retries: 1
 
+    minio:
+        command: minio server /data/ --console-address ":9001"
+        environment:
+            MINIO_ROOT_USER: ${AWS_ACCESS_KEY_ID:-minio}
+            MINIO_ROOT_PASSWORD: ${AWS_SECRET_ACCESS_KEY:-password}
+        image: minio/minio
+        ports:
+            - ${PORT_PREFIX:-0}9000:9000
+            - ${PORT_PREFIX:-0}9001:9001
+        volumes:
+            - minio:/data/
+        healthcheck:
+            test: ["CMD", "mc", "ready", "local"]
+            interval: 60s
+            timeout: 5s
+            start_period: 30s
+            start_interval: 1s
+            retries: 1
+
 volumes:
+    minio:
     pgdata:
     socket-upstream:
