--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^11.37",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
