--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
+        "build": "concurrently 'vite build' 'vite build --ssr'",
+        "build:client": "vite build",
+        "build:ssr": "vite build --ssr",
         "dev": "vite"
     },
-    "devDependencies": {
+    "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
+        "axios": "^1.7.9",
+        "qs": "^6.13.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
+    "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
         "@vitejs/plugin-react-swc": "^3.7.2",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.9",
         "concurrently": "^9.1.2",
         "laravel-vite-plugin": "^1.1.1",
         "postcss": "^8.5.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.7"
     }
