--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -37,8 +37,10 @@ services:
             AWS_ENDPOINT: ${AWS_ENDPOINT:-http://minio:9000}
             AWS_URL: ${AWS_URL:-http://localhost:${PORT_PREFIX:-0}9000/local}
             AWS_USE_PATH_STYLE_ENDPOINT: ${AWS_USE_PATH_STYLE_ENDPOINT:-true}
+        ports:
+            - ${PORT_PREFIX:-0}8000:8000
         volumes:
-            - socket-upstream:/var/run/php/
+            - socket-upstream:/var/run/unit/
 
     web:
         build:
@@ -48,7 +50,7 @@ services:
         ports:
             - ${PORT_PREFIX:-0}0080:80
         volumes:
-            - socket-upstream:/var/run/php/
+            - socket-upstream:/var/run/unit/
 
     ssr:
         build:
