--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,6 +6,11 @@ map $request_uri:$http_user_agent $loggable {
     default 1;
 }
 
+upstream unit {
+    server unix:/var/run/unit/unit.sock;
+    server laravel.test:8000 backup;
+}
+
 server {
     listen 80;
     listen [::]:80;
@@ -18,24 +23,21 @@ server {
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
 
-    index index.php;
-
     charset utf-8;
 
     location / {
-        try_files $uri /index.php?$query_string;
+        try_files $uri @unit;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    error_page 404 /index.php;
-
-    location ~ \.php$ {
-        fastcgi_pass unix:/var/run/php/php-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        include fastcgi_params;
-        fastcgi_hide_header X-Powered-By;
+    location @unit {
+        proxy_pass http://unit;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_hide_header X-Powered-By;
     }
 
     location ~ /\.(?!well-known).* {
