--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.4",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.37",
+        "laravel/pennant": "^1.14",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10",
         "league/flysystem-aws-s3-v3": "^3.29",
